base/database_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: quay.io/skupper/patient-portal-database
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pg-vol
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pg-vol
          persistentVolumeClaim:
            claimName: pg-vol-claim
