base/payment_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payment-service
  name: payment-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: payment-service
