base/frontend_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend-patient
  labels:
    app: frontend
spec:
  to:
    kind: Service
    name: frontend
  port:
    targetPort: 8080
